src/examples/errors/18_multiple_errors.veri
// Multiple errors in one file (only first is reported)
// This file demonstrates various type errors

fn bad_function() -> bool {
    42
}

fn main() {
    let x: int = true;
    let y: bool = 5 + 3;
    undefined_var = 10;
}
